--- a/NEWS
+++ b/NEWS
@@ -1,18 +1,12 @@
 dataRetrieval 2.7.17
 ===================
-* New WQX 3.0 servies available, NOT by default
-* To get new services, in readWQPqw, set legacy = FALSE
-* To get new services, in readWQPdata, service = "ResultWQX3" 
-or "ServiceWQX" or "ActivityWQX3"
-* More dataProfile examples for WQP queries.
-
-dataRetrieval 2.7.16.1
-===================
+* Fixed bug with server problems causing errors.
+* Added message of service URL.
 * Removed the forced "empty returns" for WQP, since the WQP now has properly formatted empty returns.
 * Moved the column parsing to a dedicated function for WQP.
 * Took out zip option for WQP calls, they are not allowed on WQP anymore.
-* Deprecated getQuerySummary. Users should use readWQPsummary instead.
-* Added WQX 3.0 profiles
+* Added deprecated message getQuerySummary. Users should use readWQPsummary instead.
+* Added WQX 3.0 profiles.
 * siteInfo attribute for WQP queries converted to a full station return.
 * Cleaned up date conversion in WQP
 * Updated source for groundwater level data from waterservices to waterdata. Note that waterdata services will ALSO need updating within the next year, but this change will allow for some time to make changes.
