Cleanup Status page.

--- a/vignettes/Status.Rmd
+++ b/vignettes/Status.Rmd
@@ -62,9 +62,9 @@ df <- data.frame(Function = c("readWQPdata",
                               "readNWISqw",
                               "readWQPsummary",
                               "whatNWISdata"),
-                 Status = c("Set to WQX3 full profile by default. 'legacy' option exists.",
-                            "Set to WQX3 narrow profile by default. 'legacy' option exists.", 
-                            "Set to WQX3 station profile by default. 'legacy' option exists.",
+                 Status = c("Set to legacy options by default. WQX3 options available.",
+                            "Set to legacy options by default. WQX3 options available.", 
+                            "Set to legacy options by default. WQX3 options available.",
                             rep("Currently only available via legacy services.", 3),
                             "Deprecated: should not be continued to use.",
                             "Does not have accurate information for USGS data.",
