--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+dataRetrieval 2.7.18
+===================
+* Switched from httr to httr2
+
 dataRetrieval 2.7.17
 ===================
 * Fixed bug with server problems causing errors.
