--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+dataRetrieval 2.7.18
+===================
+* Added a way to include a custom user-agent suffix via an enviornmental variable "CUSTOM_DR_UA"
+
 dataRetrieval 2.7.17
 ===================
 * Fixed bug with server problems causing errors.
